--- a/friends.html
+++ b/friends.html
@@ -21,20 +21,20 @@
 </div>
 </ul>
 </div>
-
+<body>
 <div class="row">    
-<div class="col-sm-4" id="myModal" class="modal">
+<div class="col-sm-4">
   <img src="images/Laura.jpg">
   <h2>Laura</h2>
   <div id="caption">
   <p class="imagetext">
-  	"Happiness can be found, even in the darkest of times, if one only remembers to turn on the light"
-    Hometown: San Francisco
-    Studying: International Relations and Management, 4th year
-    Favorite 7D Activity: Going to sleep after a filling meal with friends
-    Spirit Cocktail: Mimosa
-    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. 
-    Dietary Requirements: I hate fish. They are gross. 
+  	"Happiness can be found, even in the darkest of times, if one only remembers to turn on the light"<br>
+    Hometown: San Francisco<br>
+    Studying: International Relations and Management, 4th year <br>
+    Favorite 7D Activity: Going to sleep after a filling meal with friends<br>
+    Spirit Cocktail: Mimosa<br>
+    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. <br>
+    Dietary Requirements: I hate fish. They are gross. <br>
   </p>
   	
   </div>
@@ -44,12 +44,12 @@
   <img src="images/Nat.jpg" >
   <h2>Nathalie</h2>
   <p class="imagetext">
-    #yolo
-    Hometown: Los Angeles 
-    Studying: Modern History, 4th year
-    Favorite 7D Activity: Chatting while I'm cooking 
-    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. 
-    Dietary Requirements: I hate fish. They are gross. 
+    #yolo<br>
+    Hometown: Los Angeles <br>
+    Studying: Modern History, 4th year<br>
+    Favorite 7D Activity: Chatting while I'm cooking <br>
+    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. <br>
+    Dietary Requirements: I hate fish. They are gross. <br>
   </p>
   </div>
 
@@ -57,58 +57,56 @@
   <img src="images/Sam.jpg" >
   <h2>Samantha</h2>
   <p class="imagetext">
-    Life moves pretty fast.  If you don't stop to look around once in a while you could miss it.
-    Hometown: Washington DC // New Canaan, CT
-    Studying: International Relations, 4th Year
-    Favorite 7D Activity: Sleeping/Eating/Bantering
-    Spirit Cocktail: Virgin Espresso Martini//The Physician (ketel one vodka, st germain, mint & raspberries)
-    Dream Date: Hahahahaha that's funny, dating doesn't happen in St Andrews
-    Dietary Requirements: GLUTEN FREE AND PROUD, OK.
+    Life moves pretty fast.  If you don't stop to look around once in a while you could miss it.<br>
+    Hometown: Washington DC // New Canaan, CT<br>
+    Studying: International Relations, 4th Year<br>
+    Favorite 7D Activity: Sleeping/Eating/Bantering<br>
+    Spirit Cocktail: Virgin Espresso Martini//The Physician (ketel one vodka, st germain, mint & raspberries)<br>
+    Dream Date: Hahahahaha that's funny, dating doesn't happen in St Andrews<br>
+    Dietary Requirements: GLUTEN FREE AND PROUD, OK.<br>
   </p>
   </div>
-
-</div>
 
 <div class="row">  
 <div class="col-sm-4" class="imagerep">
   <img src="images/Kristen.jpg">
   <h2>Kristen</h2>
   <p class="imagetext">
-    "There's a million things I haven't done"
-    Hometown: California
-    Studying: International Relations and Management, 4th year
-    Favorite 7D Activity: eating
-    Spirit Cocktail: Betty's Tea Party
-    Dream Date: Skiing, not backcountry. 
-    Dietary Requirements: Gluten, meat, and dairy. Preferably combined. 
+    "There's a million things I haven't done" <br>
+    Hometown: California <br>
+    Studying: International Relations and Management, 4th year <br>
+    Favorite 7D Activity: eating<br>
+    Spirit Cocktail: Betty's Tea Party<br>
+    Dream Date: Skiing, not backcountry. <br>
+    Dietary Requirements: Gluten, meat, and dairy. Preferably combined. <br>
   </p>
   </div>
+
+  <div class="col-sm-4" class="imagerep">
+  <img src="images/Rebecca.jpg">
+  <h2>Rebecca</h2>
+  <p class="imagetext">
+  	"The people that mind don't matter, and the people that matter don't mind." <br>
+    Hometown: Vancouver, BC <br>
+    Studying: 4th year, Modern History and Middle Eastern Studies
+    Favorite 7D Activity: Snuggles <br>
+    Spirit Cocktail: Gin & tonic. <br>
+    Dream Date: Cooking dinner and drinking wine. Basically, a night at 7D. <br>
+    Dietary Requirements: None. Don't like olives though. <br>
+    </p>
+</div> 
 
 <div class="col-sm-4" class="imagerep"> 
 <img  src="images/Georgia.jpg" >
 <h2>Georgia</h2>
 <p class="imagetext">
-    "If you judge a fish by it's ability to climb a tree, it will spend the rest of it's life thinking it is stupid"
-    Hometown: Suffolk (The Armpit of England)
-    Studying: French and IR, 4th Year
-    Favorite 7D Activity: Mainly snuggles. Also food and projector movies 
-    Spirit Cocktail: Something fruity (cheeky...)
-    Dream Date: One where the guy shows up. GODDAMN IT.
-    Dietary Requirements: I eat all things. I am a student. 
-    </p>
-</div>
-   
-<div class="col-sm-4" class="imagerep">
-  <img src="images/Rosie.jpg">
-  <h2>Rosie</h2>
-  <p class="imagetext">
-    "Be kind whenever possible. It is always possible."
-    Hometown: Berkshire
-    Studying: Geography, 4th Year
-    Favorite 7D Activity: Drinking tea
-    Spirit Cocktail: White Russian
-    Dream Date: Surprise me
-    Dietary Requirements: Vegetarian
+    "If you judge a fish by it's ability to climb a tree, it will spend the rest of it's life thinking it is stupid" <br>
+    Hometown: Suffolk (The Armpit of England) <br>
+    Studying: French and IR, 4th Year<br>
+    Favorite 7D Activity: Mainly snuggles. Also food and projector movies <br>
+    Spirit Cocktail: Something fruity (cheeky...) <br>
+    Dream Date: One where the guy shows up. GODDAMN IT. <br>
+    Dietary Requirements: I eat all things. I am a student. <br>
     </p>
 </div>
 </div>
@@ -126,7 +124,36 @@
     Dietary Requirements: 
     </p>
 </div>
+ 
+ <div class="col-sm-4" class="imagerep">
+  <img src="images/Rosie.jpg">
+  <h2>Rosie</h2>
+  <p class="imagetext">
+    "Be kind whenever possible. It is always possible." <br>
+   	Hometown: Berkshire <br>
+    Studying: Geography, 4th Year <br>
+    Favorite 7D Activity: Drinking tea <br>
+    Spirit Cocktail: White Russian<br>
+    Dream Date: Surprise me <br>
+   	Dietary Requirements: Vegetarian<br>
+    </p>
+</div>
+
+  <div class="col-sm-4" class="imagerep">
+  <img src="images/Charlotte.jpg">
+  <h2>Charlotte</h2>
+  <p class="imagetext">
+  	"History is the lie agreed upon" <br>
+    Hometown: USA <br>
+    Studying: 3rd ir, French, Russian <br>
+    Favorite 7D Activity: Jamming with the gals <br>
+    Spirit Cocktail: Long Island ice tea <br>
+    Dream Date: Chill picnic and walk <br>
+    Dietary Requirements: Veggie <br>
+    </p>
+</div>
   </div>
+
   </body>
 
   </html>  
