--- a/friends.html
+++ b/friends.html
@@ -90,7 +90,7 @@
     Hometown: Vancouver, BC <br>
     Studying: 4th year, Modern History and Middle Eastern Studies
     Favorite 7D Activity: Snuggles <br>
-    Spirit Cocktail: Gin & tonic. <br>
+    Spirit Cocktail: Gin &amp tonic. <br>
     Dream Date: Cooking dinner and drinking wine. Basically, a night at 7D. <br>
     Dietary Requirements: None. Don't like olives though. <br>
     </p>
