--- a/friends.html
+++ b/friends.html
@@ -8,7 +8,6 @@
   <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
   <script src="jquery-3.1.1.min.js"></script>
 </head>
-<body>
 
 <div class='siteheading'>
 <h1> <a href='index.html' class='sitelink'><strong>7D Blog</strong></a></h1>
@@ -61,7 +60,7 @@
     Hometown: Washington DC // New Canaan, CT<br>
     Studying: International Relations, 4th Year<br>
     Favorite 7D Activity: Sleeping/Eating/Bantering<br>
-    Spirit Cocktail: Virgin Espresso Martini//The Physician (ketel one vodka, st germain, mint & raspberries)<br>
+    Spirit Cocktail: Virgin Espresso Martini//The Physician (ketel one vodka, st germain, mint &amp raspberries)<br>
     Dream Date: Hahahahaha that's funny, dating doesn't happen in St Andrews<br>
     Dietary Requirements: GLUTEN FREE AND PROUD, OK.<br>
   </p>
