bootstrapped words and photos for food

--- a/food.html
+++ b/food.html
@@ -49,6 +49,9 @@
 	<div class='col-sm-5'>
 		<p>
 		It started with boiling some chipolata sausages, broccoli stalk and chili pepper for a few minutes. Then everything is fried off with onions, garlic, and fennel seeds and oregano. A can of tinned tomatoes was then added and everything bubbled away while we cooked the pasta. The broccoli florets were added to cook with the pasta in the last few minutes then everything was brought together in the pan. We ‘paired’ this dish with a wine from Tesco that was on special. It was a Californian red and the label recommended to drink it with meaty pasta, so it had to be.
+		<br>
+		<br>
+		<br>
 		</p>
 	</div>
 	</div>
@@ -59,8 +62,37 @@
 		</p>
 	</div>
 	<div class='col-sm-4'>
+		<img src="images/applesauce.jpg" width="250px" class='rotateimg90'>
+	</div>
+	</div>
+	<div class='row'>
+	<div class='col-sm-9'>
+	<br>
+	<br>
+	<br>
+	<h2>Pesto Chicken and Veg</h2>
+		<p>Impromptu dinner parties are a favourite at 7D, and this meal was one of them. A last-minute throw together meal, inspired from what was in the 7D fridge and an Aldi run courtesy of an AU rental van.
+		</p>
+	</div>
+	</div>
+	<div class='row'>
+	<div class='col-sm-9'>
 		<p>
-		When we finished dinner, a cry of ‘I can make apple sauce!’ came from Nathalie. True to her word, twenty minutes later a delicious plate of apple sauce topped with a gingery-oat crumble, raspberry, and (not for Sam) a dollop of plain yoghurt arrived. The perfect light dessert for a hearty meal.
+The conversation for this happened as follows:
+		</p>
+<img src='images/firsttext.png'  width="300px" id=firsttext> <img src='images/secondtext.png' width="300px" id=secondtext>
+	</div>
+	</div>
+	<div class='row'>
+	<div class='col-sm-4'>
+	<br>
+	<br>
+	<br>
+	<img src='images/pestodinner.jpg' width='400px' class='rotateimg90'>
+	</div>
+	<div class='col-sm-5'>
+		<p>
+Sam already had chicken and broccoli in the fridge, so Rebecca picked up some pesto, and ingredients for a light apple, pear, and avocado salad. The dressing was a mustard and balsamic number, which Laura even ventured to have! Major win. 
 		</p>
 	</div>
 	</div>
