--- a/faraway.html
+++ b/faraway.html
@@ -21,23 +21,23 @@
 </div>
 </ul>
 </div>
-
+	<div class="container">
+	<div class="row">	
    <nav>
-  
-  
+
+  			<div class="col-sm-2"> 
           <ul class="sidenav">
             <li class="snav"><a href="#Edinburgh">Edinburgh</a></li>
             <li class="snav"><a href="#Skye">Isle of Skye</a></li>
             <li class="snav"><a href="#Iceland">Iceland</a></li>
             <li class="snav"><a href="#Munich">Munich</a></li>
           </ul>
-  
+  </div>
     </nav>
 
 <div id="Edinburgh">
   
   <h2>Edinburgh</h2>
-  <div class="row">
     <div class="col-sm-10">
        <img src="images/Edinburghcafe.jpg" height="300px" class="TextWrapRight">
   <p>
@@ -90,6 +90,7 @@
   </p>
 </div>   
 </div>
+</div>
 
 <div id="Munich">
 <div class="row">
@@ -102,6 +103,6 @@
    <img src="images/Okto2.jpg" height="300px" class="TextWrapLeft">
   </div>
   </div> 
-
+  </div>
   </body>
   </html>  
