far away improvements

--- a/faraway.html
+++ b/faraway.html
@@ -21,18 +21,21 @@
 </div>
 </ul>
 </div>
-	<div class="container">
+
 	<div class="row">	
    <nav>
 
-  			<div class="col-sm-2"> 
+  			
+        <div class="col-sm-10 col-sm-offset-10"> 
           <ul class="sidenav">
             <li class="snav"><a href="#Edinburgh">Edinburgh</a></li>
             <li class="snav"><a href="#Skye">Isle of Skye</a></li>
+            <li class="snav"><a href="#Lake">Lake District</a></li>
             <li class="snav"><a href="#Iceland">Iceland</a></li>
             <li class="snav"><a href="#Munich">Munich</a></li>
           </ul>
   </div>
+  </div> 
     </nav>
 
 <div id="Edinburgh">
@@ -55,10 +58,10 @@
 </div>
  
 <div id="Skye">
-  <h2>Isle of Skye</h2>
+  
 <div class="row">
     <div class="col-sm-10">
-
+<h2>Isle of Skye</h2>
   <img src="images/skye.jpg" height="300px" class="TextWrapLeft">
   <p>
     Before our final year started Rebecca and I found it was high time we visited the beautiful Isle of Skye. This was no simple feat as we decided to travel the 500 mile round trip jounrey by e-car. Feeling very environmentally friendly, we lapsed up the maginificence of Scotland bit by bit. HAving to stop every 90 miles encouraged us to explore towns we otherwise would not have such as Pitlochary, where we saw a massive dam, Fort William where we met nice fellow e-car drivers (though they had Teslas #dreamz). We also stopped off at the Harry Potter bridge, as pictured! Almost hopped aboard the Hogwarts Express but the thought of seven more years of school, even wizard school, terrified us enough to continue our muggle lives. 
@@ -66,6 +69,21 @@
   <img src="images/skyefall.jpg" height="300px" class="TextWrapRight">
   <p>
     Skye itself was everything it is chalked up to be. The drive in (after getting off the ferry) proved very dangerous as the landscape and immaculate sunset were very distracting! We stayed in Portree, the largest town on the island. We visited the Fairy pools, hiked the Quirang, and visited Dunvegan castle. 
+  </p>
+</div>  
+</div>
+
+<div id="Lake">
+  
+<div class="row">
+    <div class="col-sm-10">
+<h2>Lake District</h2>
+  <img src="images/lake.jpg" height="300px" class="TextWrapLeft">
+  <p>
+    Rebecca and my first couples holiday was spent in the Lake District. We decided to really embrase the British holiday opportunities and organized a fabulous three day hols. We stayed at Acorn House in Keswick. The beautiful B&ampB was perfect for the romantic vibes we were going for. Our room had a four poster bed and the breakfast options were on point. We wondered around the lake for our first day. It was kind of like my summers in Lake Tahoe excpet much much colder. Despite the cold we hopped in a rowboat and had a lovely paddle around. Not our usual vessl eof choice, we both laughed at the struggle of implementing our pristine rowing technique in the heavy wooden boat. 
+  <img src="images/lake2.jpg" height="300px" class="TextWrapRight">
+  <p>
+    Surrounding the lake was tons of grazing sheep, so we took a walk and tried to make some new friends. We were more keen than they were but a few allowed us to take a photo. The most popping Keswick hotspot seemed to be the mini golf course, so we played 18 and absolutely crushed. Keswick had an impressive selection of food. We sampled local restuarants and pubs, even attending a pub quiz (where we preformed less than great). While not the most exotic vacation it had its merits. We loved the trip and would definitely go back to this cozy town. 
   </p>
 </div>  
 </div>
