--- a/friends.html
+++ b/friends.html
@@ -20,7 +20,9 @@
 </div>
 </ul>
 </div>
+
 <body>
+<div class="container">
 <div class="row">    
 <div class="col-sm-4">
   <img src="images/Laura.jpg">
@@ -152,7 +154,7 @@
     </p>
 </div>
   </div>
-
+</div>
   </body>
 
   </html>  
