--- a/friends.html
+++ b/friends.html
@@ -117,12 +117,12 @@
   <img src="images/Imogen.jpg">
   <h2>Imogen</h2>
   <p class="imagetext">
-    Hometown: 
-    Studying: 
-    Favorite 7D Activity: 
-    Spirit Cocktail:
-    Dream Date: 
-    Dietary Requirements: 
+    Hometown: Suffolk <br>
+    Studying: History, 4th Year <br>
+    Favorite 7D Activity: <br>
+    Spirit Cocktail: <br>
+    Dream Date: <br>
+    Dietary Requirements: <br>
     </p>
 </div>
  
