--- a/friends.html
+++ b/friends.html
@@ -53,8 +53,8 @@
     Hometown: Los Angeles <br>
     Studying: Modern History, 4th year<br>
     Favorite 7D Activity: Chatting while I'm cooking <br>
-    Dream Date: Going to a cozy cafe, with lots of cake, that I've never heard of before. <br>
-    Dietary Requirements: I hate fish. They are gross. <br>
+    Dream Date: Skiing, not backcountry. <br>
+    Dietary Requirements: Gluten, meat, and dairy. Preferably combined.  <br>
   </p>
   </div>
 
@@ -82,8 +82,8 @@
     Studying: International Relations and Management, 4th year <br>
     Favorite 7D Activity: eating<br>
     Spirit Cocktail: Betty's Tea Party<br>
-    Dream Date: Skiing, not backcountry. <br>
-    Dietary Requirements: Gluten, meat, and dairy. Preferably combined. <br>
+    Dream Date: Something with food and good chat. Oh and maybe some sort of physical contact, so I actually know it's a date... <br>
+    Dietary Requirements: glutenfreie <br>
   </p>
   </div>
 
@@ -124,8 +124,8 @@
     Hometown: Suffolk <br>
     Studying: History, 4th Year <br>
     Favorite 7D Activity: <br>
-    Spirit Cocktail: <br>
-    Dream Date: <br>
+    Spirit Cocktail: Espresso Martinit <br>
+    Dream Date: Country Music Concert<br>
     Dietary Requirements: <br>
     </p>
 </div>
