fixed nav bar more
made all the relevant page's title bigger in nav bar

--- a/faraway.html
+++ b/faraway.html
@@ -15,9 +15,9 @@
 
 <ul class='topnav'>
 <div class='container'>
-    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'><strong>Food.</strong></a></li></div>
+    <div class='col-sm-4'><li> <a href='food.html' class='sitelink'><strong>Food.</strong></a></li></div>
     <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'><strong>Friends.</strong></a></li></div>
-    <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'><strong>Far Away.</strong></a></li></div>
+    <div class='col-sm-4'> <li id=Faraway> <a href='faraway.html' class='sitelink'><strong>Far Away.</strong></a></li></div>
 </div>
 </ul>
 </div>
