--- a/friends.html
+++ b/friends.html
@@ -14,8 +14,8 @@
 
 <ul class='topnav'>
 <div class='container'>
-    <div class='col-sm-4'><li id="Food"> <a href='food.html' class='sitelink'><strong>Food.</strong></a></li></div>
-    <div class='col-sm-4'><li> <a href='friends.html' class='sitelink'><strong>Friends.</strong></a></li></div>
+    <div class='col-sm-4'><li> <a href='food.html' class='sitelink'><strong>Food.</strong></a></li></div>
+    <div class='col-sm-4'><li id='Friends'><a href='friends.html' class='sitelink'><strong>Friends.</strong></a></li></div>
     <div class='col-sm-4'> <li> <a href='faraway.html' class='sitelink'><strong>Far Away.</strong></a></li></div>
 </div>
 </ul>
